--- a/styles/Home.css
+++ b/styles/Home.css
@@ -1,8 +1,5 @@
 .slider-all {
   position: relative;
-  /* box-shadow:
-    -5px -5px 5px rgba(0, 0, 0, 0.1),
-    5px 5px 5px rgba(0, 0, 0, 0.1) !important; */
 }
 
 .awssld__box .awssld__content {
@@ -39,7 +36,7 @@
 .awssld__controls button .awssld__controls__arrow-right::before,
 .awssld__controls button .awssld__controls__arrow-right::after {
   background-color: #fff;
-  border: 1px solid rgba(0, 0, 0, 0.3);
+  border: var(--border-main);
 }
 
 .log-yourself-in {
@@ -48,11 +45,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  /* align-items: center; */
   padding: 2rem 2rem;
-  box-shadow:
-    -5px -5px 5px rgba(0, 0, 0, 0.1),
-    5px 5px 5px rgba(0, 0, 0, 0.1) !important;
+  box-shadow: var(--box-shadow-main);
 }
 
 .log-yourself-in p:nth-child(1) {
@@ -80,9 +74,7 @@
   margin: 2rem 0;
   background-color: white;
   padding: 2rem 1rem;
-  box-shadow:
-    -5px -5px 5px rgba(0, 0, 0, 0.1),
-    5px 5px 5px rgba(0, 0, 0, 0.1) !important;
+  box-shadow: var(--box-shadow-main);
 }
 
 .shop-by-categories-all {
@@ -114,7 +106,6 @@
   color: blue;
 }
 
-
 .shop-by-categories-item :nth-child(3) {
   margin-top: 1rem;
   border: 2px solid black;
@@ -123,24 +114,11 @@
   color: black;
 }
 
-
-
-
-
-
-
-
-
-
-
-
 .top-sellers {
   background-color: white;
   padding: 2rem 1rem;
   margin: 4rem 0;
-  box-shadow:
-    -5px -5px 5px rgba(0, 0, 0, 0.1),
-    5px 5px 5px rgba(0, 0, 0, 0.1) !important;
+  box-shadow: var(--box-shadow-main);
 }
 
 .top-sellers-all {
@@ -150,40 +128,21 @@
   overflow-x: scroll;
 }
 
-.top-sellers-item {
-  margin: 0.5rem;
-  min-width: 200px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-
-
 .logos {
   background-color: white;
   margin: 3rem 0;
   padding: 2rem 1rem;
-  box-shadow:
-    -5px -5px 5px rgba(0, 0, 0, 0.1),
-    5px 5px 5px rgba(0, 0, 0, 0.1) !important;
+  box-shadow: var(--box-shadow-main);
 }
 
 .logos .logo-images {
   display: flex;
-  /* flex-wrap: wrap; */
   flex-direction: column;
 }
 
 .logos .logo-row {
   margin: 2rem 0;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  /* height: 40px; */
 }
-
-.logos .logo-row img {
-  height: 60px;
+.logos .logo-row img{
+  height: 40px;
 }
