--- a/styles/global.css
+++ b/styles/global.css
@@ -23,9 +23,7 @@ body h1 {
   border-radius: 0 0 5rem 5rem;
   padding: 1.5rem 2rem 0.5rem;
   margin-bottom: 2rem;
-  box-shadow:
-    -5px -5px 5px rgba(0, 0, 0, 0.1),
-    5px 5px 5px rgba(0, 0, 0, 0.1) !important;
+  box-shadow: var(--box-shadow-main);
 }
 
 
@@ -38,5 +36,4 @@ body input {
   body h1 {
     width: 40%
   }
-  
 }
