--- a/styles/Alert.css
+++ b/styles/Alert.css
@@ -1,7 +1,6 @@
 .alert-page {
-  position: absolute;
+  position: fixed;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
   top: 0;
@@ -9,29 +8,41 @@
   left: 0;
   right: 0;
   z-index: 999;
-  background-color: rgba(255, 255, 255, 0);
+  background-color: rgb(0, 0, 0, 0.85);
+  overflow: hidden;
+  filter: blur(0.5);
 }
 
 .alert {
-  border: 1px solid black;
-  border-radius: 20px;
+  border: var(--border-main);
+  border-radius: 1rem;
+  width: 40%;
   padding: 2rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-color: rgba(0, 0, 0, 0.1);
+  align-items: center;
+  background-color: whitesmoke;
 }
 
 .alert p {
-  margin: 1rem 0;
+  margin: 2rem 0;
+  text-align: center;
+  font-size: 1.25rem;
+  /* color: white; */
 }
 
 .alert button {
   padding: 1rem 0;
   border-radius: 20px;
   outline: none;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  background-color: rgba(59, 59, 252, 1);
+  border: var(--border-main);
+  background-color: var(--button-bg-color);
   color: white;
   cursor: pointer;
+  width: 150px !important;
+}
+
+.alert button:hover {
+  background-color: var(--button-bg-color-hover);
 }
