--- a/styles/Home.css
+++ b/styles/Home.css
@@ -155,3 +155,89 @@
   /* height: 40px; */
   /* margin: 0 1rem !important; */
 }
+
+.secure-listing {
+  padding: 2rem 1rem;
+  background-color: #fff;
+  box-shadow: var(--box-shadow-main);
+}
+.secure-listing ul{
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 10rem;
+  margin: 0 auto;
+}
+
+.secure-listing ul li{
+  border: var(--border-main);
+  width: 25vw;
+  padding: 1rem 0.5rem;
+}
+
+.secure-listing ul li:nth-child(2){
+  width: 40vw;
+}
+
+.secure-listing ul li svg{
+  font-size: 30px;
+  margin-bottom: 1rem;
+}
+
+.secure-listing ul li p{
+  margin-top: 10px;
+  color: gray;
+}
+
+.got-a-question {
+  margin-top: 3rem;
+  padding: 2rem 1rem;
+  background-color: #fff;
+  box-shadow: var(--box-shadow-main);
+  text-align: center;
+}
+
+.got-a-question>div{
+  border: var(--border-main);
+  width: 75%;
+  margin: 0 auto;
+  padding: 1rem;
+}
+
+.got-a-question>div>svg{
+  font-size: 50px;
+}
+
+.got-a-question>div>div{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1rem;
+}
+
+.got-a-question>div>div div{
+  display: flex;
+  flex-direction: row;
+  cursor: pointer;
+  align-items: center;
+  border: 1px solid black;
+  padding: 10px 1rem;
+  margin-left: 1rem;
+}
+
+.got-a-question>div>div div:hover{
+  background-color: rgba(0, 0, 0, 0.1);
+  border: 1px solid #fff;
+}
+
+.got-a-question>div>div div p{
+  margin-left: 1rem;
+}
+
+.got-a-question p{
+  color: gray;
+}
