--- a/styles/Category.css
+++ b/styles/Category.css
@@ -1,9 +1,8 @@
 .categories-all {
   border-radius: 1rem;
   position: relative;
-  box-shadow:
-    -5px -5px 5px rgba(0, 0, 0, 0.1),
-    5px 5px 5px rgba(0, 0, 0, 0.1) !important;
+  box-shadow: var(--box-shadow-main);
+  background-color: white;
   margin-bottom: 3rem;
 }
 
@@ -18,7 +17,7 @@
   background-color: white;
   padding: 10px 0.5rem;
   cursor: pointer;
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  border: var(--border-main);
   box-shadow: 2px 1px 2px rgba(150, 150, 150, 0.1);
 }
 
@@ -39,7 +38,6 @@
   position: absolute;
   display: none;
   list-style: none;
-  /* padding-left: 3rem; */
   left: 50%;
   width: 45%;
   top: 5%;
